Shogun KRR working

--- a/notebooks/KRR.ipynb
+++ b/notebooks/KRR.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from shogun import *\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn import datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# target variable\n",
     "target = ['SALE PRICE']\n",
-    "y_train = df_train[target]"
+    "y_train = df_train[target]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,24 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dropping some data to account for Memory error, see issue #2\n",
-    "label_X = label_X[:3000]\n",
-    "y_train = y_train[:3000]\n"
+    "label_X = label_X[:10000]\n",
+    "y_train = y_train[:10000]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "0.9064300060272217\n"
+     "text": [
+      "22.480963706970215\n"
+     ]
     }
    ],
    "source": [
@@ -164,17 +168,99 @@
     "t0 = time()\n",
     "skr = KernelRidge(kernel='rbf', gamma=0.1)\n",
     "skr.fit(label_X, y_train)\n",
-    "ts1 = time() - t0\n",
-    "print(ts1)"
+    "tsk1 = time() - t0\n",
+    "print(tsk1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert features and labels suitable for shogun\n",
+    "\n",
+    "label_X= label_X.to_numpy().astype(float)\n",
+    "y_train = y_train.to_numpy().astype(float)\n",
+    "y_train = y_train.reshape(y_train.shape[0],) #reshape to (num_samples,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65.07133722305298\n"
+     ]
+    }
+   ],
+   "source": [
+    "from shogun import *\n",
+    "\n",
+    "\n",
+    "train_features = RealFeatures(label_X.T)\n",
+    "labels_train = RegressionLabels(y_train)\n",
+    "\n",
+    "\n",
+    "width = 0.1\n",
+    "kernel = GaussianKernel(train_features, train_features, width)\n",
+    "tau = 1\n",
+    "\n",
+    "t0=time()\n",
+    "krr = KernelRidgeRegression(tau, kernel, labels_train)\n",
+    "krr.train()\n",
+    "tsg1=time()-t0\n",
+    "\n",
+    "print(tsg1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "############ Final remarks  ############\n",
+      "----------------------------------------\n",
+      "\n",
+      "\n",
+      "Sklearn training time: 22.480963706970215\n",
+      "Shogun training time: 65.07133722305298\n",
+      "Performance gap: 42.590373516082764\n",
+      "\n",
+      "\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Final remarks\n",
+    "print('----------------------------------------')\n",
+    "print(\"############ Final remarks  ############\")\n",
+    "print('----------------------------------------')\n",
+    "print(\"\\n\")\n",
+    "print(\"Sklearn training time: \" + str(tsk1))\n",
+    "print(\"Shogun training time: \" + str(tsg1))\n",
+    "print(\"Performance gap: \" + str(tsg1 - tsk1))\n",
+    "print(\"\\n\")\n",
+    "print('----------------------------------------')\n"
    ]
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.6.7 64-bit ('shogun': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36764bitshogunconda93574ccea9d34c21bb391e6545381a80"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7-final"
+   "version": "3.6.10"
   },
   "mimetype": "text/x-python",
   "name": "python",
